--- a/render.yaml
+++ b/render.yaml
@@ -8,4 +8,4 @@ services:
     name: saiv-backend
     rootDir: backend
     buildCommand: pip install --no-cache-dir -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    startCommand: python run.py
