--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ fastapi>=0.111.0,<0.116.0
 uvicorn[standard]>=0.30.0,<0.32.0
 pydantic>=2.6.0,<3
 pydantic-settings>=2.1.0,<3
+python-multipart>=0.0.6
 
 # Supabase
 supabase>=2.10.0
